<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.maurisbusinesscard.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white">

    <ImageView
        android:src="@drawable/ogo_spol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/mauris"
        android:textSize="@dimen/my_text_size"
        android:padding="@dimen/my_padding"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textColor="#02965b"
        android:layout_weight="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kingdom"
            android:textSize="@dimen/my_text_size"
            android:padding="@dimen/my_padding"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_weight="1"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout_1">

        <ImageView
            android:src="@drawable/plaszczka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:id="@+id/plaszczka_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/my_text_size_banner"
            android:padding="@dimen/my_padding"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:text="@string/adventure"
            android:id="@+id/adventure_text" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/my_text_size"
            android:padding="@dimen/my_padding_small"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColorLink="@android:color/black"
            android:layout_below="@id/plaszczka_image"
            android:layout_alignParentLeft="true"
            android:text="@string/website"
            android:id="@+id/website_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/my_text_size"
            android:padding="@dimen/my_padding_small"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColorLink="@android:color/black"
            android:layout_below="@id/website_text"
            android:text="@string/phone"
            android:id="@+id/phone_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/my_text_size"
            android:padding="@dimen/my_padding_small"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColorLink="@android:color/black"
            android:layout_below="@id/phone_text"
            android:text="@string/address" />

    </RelativeLayout>

</LinearLayout>
